Fixes camera orientation (works on mobile)

--- a/app/css/ar.css
+++ b/app/css/ar.css
@@ -25,8 +25,9 @@ html,body {
 
 .portrait canvas {
     transform-origin: 0 0;
-    transform: rotate(90deg) translateX(-100%);
+    transform: rotate(-90deg) translateX(-100%);
     /* added */
+    padding-bottom: 0px !important;
     position: absolute;
     top:0;
     bottom: 0;
@@ -38,6 +39,7 @@ html,body {
 .desktop canvas {
     transform: scale(-1, 1);
     /* added */
+    padding-bottom: 0px !important;
     position: absolute;
     top:0;
     bottom: 0;
